<!--
  ~ Copyright (C) 2020 Sandip Vaghela
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_view_in_imdb">View in IMDb</string>
    <string name="ad_banner_unit_id" translatable="false">ca-app-pub-6628325093439880/1366582369</string>
    <string name="ad_rewarded_unit_id" translatable="false">ca-app-pub-6628325093439880/7723902265</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-6628325093439880~2908563040</string>
    <string name="app_name">WatchDone</string>
    <string name="button_add_watched">Add Watched</string>
    <string name="content_desc_movie_poster">Movie/TV Show Poster</string>
    <string name="content_desc_watched_icon">Watched Icon</string>
    <string name="contentDesc">fab</string>
    <string name="date_time_format">dd-MMM-yyyy hh:mm a</string>
    <string name="dialog_msg_no_network">No Network Available. Please check connection and try again.</string>
    <string name="dialog_title_no_network">No Network</string>
    <string name="fcm_channel_default">Updates</string>
    <string name="fcm_channel_id" translatable="false">fcm_default_channel</string>
    <string name="input_hint_email">Email</string>
    <string name="input_hint_name">Name</string>
    <string name="input_title">Title</string>
    <string name="key_version" translatable="false">version</string>
    <string name="made_with_love">Made with ❤ In India.</string>
    <string name="msg_grant_app_permissions">Please Grant Permissions</string>
    <string name="msg_login_failed">Login Failed</string>
    <string name="msg_no_changes">No Changes to Save</string>
    <string name="msg_profile_updated">Profile Updated</string>
    <string name="pref_title_image_size">Image Size</string>
    <string name="pref_title_privacy_policy">Privacy Policy</string>
    <string name="select_date">Select Date/Time</string>
    <string name="text_action_exit">Exit</string>
    <string name="text_action_grant">Grant</string>
    <string name="text_add_to_watchlist">Add to Watchlist</string>
    <string name="text_discover">Discover</string>
    <string name="text_login_to_tmdb">Login to TMDb</string>
    <string name="text_mark_as_unwatched">Mark as UnWatched</string>
    <string name="text_mark_as_watched">Mark as Watched</string>
    <string name="text_remove_from_watchlist">Remove from Watchlist</string>
    <string name="text_ship_show_watched">Show only Watched</string>
    <string name="theme_battery">Set by Battery Saver</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_device_default">Device Default</string>
    <string name="theme_light">Light</string>
    <string name="title_activity_compose">WatchDone</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_home">WatchDone</string>
    <string name="title_search">Search</string>
    <string name="title_search_results">Search Results for %s</string>
    <string name="title_settings">Settings</string>
    <string name="title_trending_movies">Trending Movies</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="url_play_store_developer" translatable="false">https://play.google.com/store/apps/dev?id=5302118761742285445</string>
    <string name="url_play_store" translatable="false">https://watchdone.page.link/download</string>
    <string name="url_privacy_policy" translatable="false">https://afterroot.web.app/privacy-policy</string>
    <string name="text_send_feedback">Send Feedback</string>
    <string name="action_share_to_instagram_story">Share to Instagram Story</string>
    <string name="msg_removed_from_wl">Removed from Watchlist</string>
    <string name="msg_add_to_wl_first">Please add to Watchlist First</string>
    <string name="msg_added_to_wl">Added to Watchlist</string>
    <string name="msg_limit_error">Can\'t add more movies as limit of 5</string>
    <string name="title_cast">Cast</string>
    <string name="dialog_msg_rewarded_ad">Movie will be added to watchlist after watching ad. This step is taken subject to support development and server costs. Thanks for your co-operation.</string>
    <string name="text_ok">OK</string>
    <string name="rate_on_play_store">Rate on Play Store</string>
    <string name="text_info_no_movies">No Movies in Watchlist\nAdd by clicking \'+\' below</string>
    <string name="text_info_no_movies_in_filter">No Movies found in current filter.</string>
    <string name="format_search_result_for">Results for \'%s\'</string>
    <string name="text_please_wait">Please Wait…</string>
    <string name="text_search_movies">Movies</string>
    <string name="text_search_tv">TV</string>
    <string name="text_search_people">People</string>
    <string name="search_hint">Search Movies, TV and People…</string>
</resources>
