<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020-2021 Sandip Vaghela
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="App Settings">
        <ListPreference
            android:defaultValue="@string/theme_device_default"
            android:entries="@array/theme_mode"
            android:entryValues="@array/theme_mode"
            android:key="app_theme"
            android:title="App Theme"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="TMDb Settings">
        <ListPreference
            android:key="image_size"
            android:title="@string/pref_title_image_size"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory
        app:key="key_debug"
        app:title="Debug">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="use_prod_db"
            app:title="Use Prod Database" />
    </PreferenceCategory>
    <PreferenceCategory app:title="About">
        <Preference
            app:icon="@mipmap/ic_launcher"
            app:key="@string/key_version"
            app:title="@string/app_name" />
        <Preference app:summary="@string/made_with_love" />
        <Preference android:title="@string/pref_title_privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy_policy" />
        </Preference>
        <Preference
            android:key="oss_lic"
            android:title="Open Source Licences" />
        <Preference
            app:icon="@drawable/tmdb_logo"
            app:summary="This product uses the TMDb API but is not endorsed or certified by TMDb."
            app:title="Data is provided by TMDb">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.themoviedb.org/" />
        </Preference>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>