<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020-2021 Sandip Vaghela
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.afterroot.watchdone.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/toSettings"
            app:destination="@id/navigation_settings"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/toEditProfile"
            app:destination="@id/navigation_edit_profile"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/toDiscover"
            app:destination="@id/navigation_discover"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/toSearchNew"
            app:destination="@id/navigation_search_new"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/toMediaInfo"
            app:destination="@id/navigation_media_info"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.afterroot.watchdone.ui.settings.SettingsFragment"
        android:label="@string/title_activity_settings" />
    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.afterroot.watchdone.ui.profile.EditProfileFragment"
        android:label="@string/title_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.afterroot.watchdone.ui.discover.DiscoverFragment"
        android:label="@string/text_discover"
        tools:layout="@layout/fragment_discover">
        <action
            android:id="@+id/discoverToMediaInfo"
            app:destination="@id/navigation_media_info"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/navigation_search_new"
        android:name="com.afterroot.watchdone.ui.search.SearchNewFragment"
        android:label="SearchNewFragment"
        tools:layout="@layout/search_new_fragment">
        <deepLink
            android:id="@+id/deep_link_search"
            android:autoVerify="true"
            app:uri="https://watchdone.web.app/search"
            tools:targetApi="m" />
        <action
            android:id="@+id/searchToMediaInfo"
            app:destination="@id/navigation_media_info"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/navigation_search_new" />
    </fragment>
    <fragment
        android:id="@+id/navigation_media_info"
        android:name="com.afterroot.watchdone.media.ui.MediaInfoFragment"
        android:label="MediaInfoFragment">
        <deepLink
            android:autoVerify="true"
            app:uri="https://watchdone.web.app/media/{type}/{mediaId}"
            tools:targetApi="m" />
        <argument
            android:name="mediaId"
            app:argType="integer" />
        <argument
            android:name="type"
            app:argType="string" />
    </fragment>
</navigation>
