<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020 Sandip Vaghela
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="java.util.List" />

        <import type="com.afterroot.tmdbapi2.model.Genre" />

        <variable
            name="moviedb"
            type="com.afterroot.tmdbapi.model.MovieDb" />

        <variable
            name="settings"
            type="com.afterroot.watchdone.ui.settings.Settings" />

        <variable
            name="posterUrl"
            type="String" />

        <variable
            name="genres"
            type="List&lt;Genre>" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorSurface"
                app:expandedTitleGravity="top"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:title="@{moviedb.title, default=Title}"
                app:toolbarId="@+id/toolbar_movie_info">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentDesc"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:movieDb="@{moviedb}"
                    app:settings="@{settings}"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/padding_horizontal"
                    android:layout_marginLeft="@dimen/padding_horizontal">

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:genres="@{genres}"
                        app:layout_collapseMode="none"
                        app:singleLine="true"
                        tools:layout_height="32dp"
                        tools:layout_width="32dp" />

                </HorizontalScrollView>

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar_movie_info"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin" />

                <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                    android:id="@+id/progress_movie_info"
                    style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal.NoPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:indeterminate="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:mpb_progressStyle="horizontal"
                    app:mpb_useIntrinsicPadding="false"
                    tools:layout_height="4dp" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/action_add_wlist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_horizontal"
                    android:layout_marginTop="@dimen/padding_vertical"
                    android:layout_marginEnd="@dimen/padding_horizontal"
                    android:text="@string/text_add_to_watchlist"
                    android:visibility="gone"
                    app:icon="@drawable/ic_bookmark_border"
                    app:layout_constraintEnd_toStartOf="@+id/action_mark_watched"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/action_mark_watched"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_horizontal"
                    android:layout_marginRight="@dimen/padding_horizontal"
                    android:text="@string/text_mark_as_watched"
                    android:visibility="gone"
                    app:icon="@drawable/ic_done"
                    app:layout_constraintBottom_toBottomOf="@+id/action_add_wlist"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toEndOf="@+id/action_add_wlist"
                    app:layout_constraintTop_toTopOf="@+id/action_add_wlist"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/movie_overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_horizontal"
                    android:layout_marginTop="@dimen/padding_vertical"
                    android:layout_marginRight="@dimen/padding_horizontal"
                    android:text="@{moviedb.overview}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/action_add_wlist"
                    tools:text="@tools:sample/lorem[15]" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cast_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/padding_vertical"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_overview"
                    tools:listitem="@layout/list_item_cast" />

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="@dimen/padding_vertical"
                    android:layout_marginBottom="@dimen/padding_vertical"
                    app:adSize="BANNER"
                    app:adUnitId="@string/ad_banner_unit_id"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cast_list" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>